--- a/index_ma.html
+++ b/index_ma.html
@@ -32,7 +32,7 @@
             普段はSwiftを学んでいてIphoneアプリを作っています。<br>
             AfterEffectsやPremiereを触るのも好きです。<br>
             IllustratorとかPhotoshopとかも使えるようになりたいです。<br>
-            洋楽が好きです。お菓子をずっと食べています。<br>
+            洋楽が好き!<br>
             <br>
         </p>
     </section>
