--- a/index.html
+++ b/index.html
@@ -37,14 +37,6 @@
         </p>
     </section>
 
-    <!--
-   
-     <section class="torisetsu">
-       <h2 class="title1">トリセツ</h2>
-        
-    </section>
--->
-
     <section class="photo" id="photo">
         <h2 class="title1">IphoneApp</h2>
         <div class="big">
@@ -86,6 +78,10 @@
         <a class="insta" href="https://www.instagram.com/marina_2_23/" target="_blank"><img src="img/insta.png" width="80">
             <p>@marina_2_23</p>
         </a>
+        <a class="git" href="https://github.com/marinamikr" target="_blank"><img src="img/git1.png" width="170">
+            <p href="https://github.com/marinamikr" target="_blank">marinamikr</p>
+        </a>
+
         <a class="fb" href="https://www.facebook.com/harada.marina.92" target="_blank"><img src="img/facebook.jpg" width="80">
             <p href="https://www.facebook.com/harada.marina.92" target="_blank">Marina Harada</p>
         </a>
